# BabylonEmbers

./: .gitignore  .gitmodules  CMakeLists.txt  Deploy.bat  Deploy.py  README.md  resource.rc
Assets/: Crossbow.aseprite  Player.aseprite  Sky.aseprite  StartScreen.aseprite  TowerTop.aseprite  icon-app.aseprite
Assets/Music/: TowerDefender1.fms  TowerDefender2.fms
Assets/Sounds/: Bleed.fms  BrickBreak.fms  BrickDebrisFall.fms  BrickSmasherHit.fms  BulletHitCharacter.fms  BulletHitEnv.fms  Explosion.fms  Flame.fms  FlameAir.fms  GunShot.fms  MolotovBreaking.fms  MolotovThrow.fms  Scream.fms
Assets/Textures/: StartScreen.aseprite
Sources/: Config.h  Config.h.in  Main.cpp
Sources/Engine/: Engine.cpp  Engine.h
Sources/Engine/Config/: Category.h  Config.cpp  Config.h
Sources/Engine/GameObjects/: GameObject.cpp  GameObject.h  PhysicsRectangle.cpp  PhysicsRectangle.h
Sources/Game/: Arrow.cpp  Arrow.h  Brick.cpp  Brick.h  Game.cpp  Game.h  PhysicsCategory.h  Player.cpp  Player.h  TowerTop.cpp  TowerTop.h
Sources/Game/Characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  EnemyBomber.cpp  EnemyBomber.h  EnemyGunner.cpp  EnemyGunner.h  EnemyMolotov.cpp  EnemyMolotov.h  EnemySmasher.cpp  EnemySmasher.h  Player.cpp  Player.h
Sources/Game/Projectiles/: Arrow.cpp  Arrow.h  Bomb.cpp  Bomb.h  Bullet.cpp  Bullet.h  FlameParticle.cpp  FlameParticle.h  Molotov.cpp  Molotov.h
